Fix keyboard issues on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@ body {
   color: #666172;
   font-size: 1.4rem;
   height: 100vh;
+  position: absolute;
 
   background: #8f9192;  /* fallback for old browsers */
   background: -webkit-linear-gradient('to bottom, #8f9192, #b6b9bb, #ffffff');
